syntax = "proto3";
package shopgrpc;

option go_package = "./shopgrpc";

message ProductRequest {
    string nama = 1;
    string category = 2;
    string quantity = 3;
    float price = 4;
    string product_image = 5;
    int32 seller_id = 6;
}

message ProductRequestResponse {
    int32 status = 1;
    string message = 2;
}

message ProductPagination {
    int32 page = 1;
    int32 limit = 2;
}

message ProductResponse {
    int32 status = 1;
    repeated ProductRequest products = 2;
    string message = 3;
}

service ProductService {
    rpc CreateProduct(ProductRequest) returns (ProductRequestResponse);
    rpc GetProduct(ProductPagination) returns (ProductResponse);
}